team/output/BD_0913_0171_1120_0113/308/2/0/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_0913_0171_1120_0113_9gbgkEB.py", line 44
    flag = 1
       ^
IndentationError: expected an indented block
